# mcp-agents

./: .gitignore  README.md  SPEC_RULES.md  SRC.md  generate_mcp_config.cmd  generate_mcp_config.py  pyproject.toml  setup-venv.cmd  setup-venv.ps1  spec.md
docs/: SW_SPEC.md
mcp_agent_packs/background/: INSTRUCTIONS.md  README.md  mcp_template.json  prepare.py
mcp_agent_packs/work_base/: README.md  mcp_template.json
